--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                         </div>
                         <a href="#">Forgot Password?</a>
                     </div>
-                   <a href="admin.html"class="sign-in-btn">SIGN IN</a> 
+                   <a href="index.html"class="sign-in-btn">SIGN IN</a> 
                 </div>
 
 
