update karon alas 9:21AM

--- a/registrtation.html
+++ b/registrtation.html
@@ -12,7 +12,7 @@
         <h1>Note<span>It</span><span class="exclamationR">!</span></h1>
         <div class="navbarR">
               <ul>
-                <li><a href="home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="#">REGISTER</a></li>
                 <li><a href="login.html">SIGN IN</a></li>
               </ul>  
