--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
             <h1>Note<span>It</span><span class="exclamationL">!</span></h1>
             <div class="navbar">
                   <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="registrtation.html">REGISTER</a></li>
                     <li><a href="login.html">SIGN IN</a></li>
                   </ul>  
